// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-21 WithStyles(ForwardRef(Container))-root-20 MuiContainer-maxWidthLg-27"
  >
    <div
      class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-justify-content-xs-center-47"
    >
      <div
        class="MuiGrid-root-29 WithStyles(ForwardRef(Grid))-root-132 WithStyles(ForwardRef(Grid))-root-133 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-10-73 MuiGrid-grid-md-6-97"
        >
          <div
            class="makeStyles-headerContainer-134"
          >
            <h6
              class="MuiTypography-root-135 MuiTypography-h6-145 MuiTypography-colorTextPrimary-160"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-135 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <li
      class="MuiListSubheader-root-168 makeStyles-subHeader-167 MuiListSubheader-sticky-173"
    >
      <div
        class="MuiGrid-root-29 makeStyles-root-181 MuiGrid-container-30 MuiGrid-item-31"
      >
        <div
          class="MuiGrid-root-29 makeStyles-titlesContainer-182 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-10-101 MuiGrid-grid-lg-true-105"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
          >
            <div
              class="MuiGrid-root-29 makeStyles-title-174 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-4-109"
            >
              <p
                class="MuiTypography-root-135 makeStyles-title-174 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
              >
                Vaults
              </p>
              <img
                alt="List description"
                class="makeStyles-sortInfoIcon-176"
                color="primary"
                src="/assets/icons/vault-sort-info.svg"
                title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
              />
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-title-174 makeStyles-columnTitle-179 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <p
                class="MuiTypography-root-135 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
              >
                APY
              </p>
              <img
                alt="What is APR?"
                class="makeStyles-sortInfoIcon-176"
                color="primary"
                src="/assets/icons/vault-sort-info.svg"
                title="An annual percentage yield (APY), is the yearly rate earned by depositing in each vault."
              />
              <button
                aria-label="sort descending by APR"
                class="MuiButtonBase-root-206 MuiIconButton-root-197 makeStyles-sortIcon-175 makeStyles-nonSetSort-177"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-205"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-209 MuiSvgIcon-colorPrimary-210"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-386"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-title-174 makeStyles-columnTitle-179 makeStyles-tvlColumn-180 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <p
                class="MuiTypography-root-135 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
              >
                TVL
              </p>
              <img
                alt="What is TVL?"
                class="makeStyles-sortInfoIcon-176"
                color="primary"
                src="/assets/icons/vault-sort-info.svg"
                title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
              />
              <button
                aria-label="sort descending by TVL"
                class="MuiButtonBase-root-206 MuiIconButton-root-197 makeStyles-sortIcon-175 makeStyles-nonSetSort-177"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-205"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-209 MuiSvgIcon-colorPrimary-210"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-386"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-title-174 makeStyles-columnTitle-179 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <p
                class="MuiTypography-root-135 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
              >
                MY DEPOSITS
              </p>
              <img
                alt="What represent My Deposits?"
                class="makeStyles-sortInfoIcon-176"
                color="primary"
                src="/assets/icons/vault-sort-info.svg"
                title="Represents the dollar value of all assets you deposited in each vault"
              />
              <button
                aria-label="sort descending by balance"
                class="MuiButtonBase-root-206 MuiIconButton-root-197 makeStyles-sortIcon-175 makeStyles-nonSetSort-177"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-205"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-209 MuiSvgIcon-colorPrimary-210"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-386"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-justify-content-xs-flex-end-48 MuiGrid-grid-md-true-91"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38 MuiGrid-justify-content-xs-flex-end-48"
          >
            <button
              aria-label="Open Vaults Filters"
              class="MuiButtonBase-root-206 MuiIconButton-root-197 makeStyles-filterButton-227"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-205"
              >
                <img
                  alt="vault filters"
                  src="/assets/icons/vault-filters.svg"
                />
              </span>
              <span
                class="MuiTouchRipple-root-386"
              />
            </button>
          </div>
        </div>
      </div>
    </li>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-root-262 makeStyles-enabledVault-263 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-clickableSection-265 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-10-101 MuiGrid-grid-lg-true-105"
      >
        <div
          class="MuiGrid-root-29 makeStyles-iconBadgeContainer-280 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-direction-xs-column-33 MuiGrid-justify-content-xs-center-47 MuiGrid-grid-xs-auto-62"
        >
          <div
            class="MuiGrid-root-29 makeStyles-iconContainer-284 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
          >
            <img
              alt="Badger Curve.fi renBTC/wBTC/sBTC Vault Symbol"
              class="makeStyles-symbol-278"
              src="/assets/icons/bsbtccrv-ethereum.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-4-55 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-4-109"
            >
              <p
                class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
              >
                Convex
                 - 
                Curve.fi renBTC/wBTC/sBTC
              </p>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <p
                class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
              >
                0.25%
              </p>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-tvl-269 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <div
                class="MuiBox-root-325 MuiBox-root-326"
              >
                <p
                  class="MuiTypography-root-135 makeStyles-itemText-267 MuiTypography-body1-137"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <div
                class="MuiBox-root-325 MuiBox-root-329"
              >
                <p
                  class="MuiTypography-root-135 makeStyles-itemText-267 MuiTypography-body1-137"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-4-55 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-4-109"
            >
              <p
                class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-8-113"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-29 makeStyles-nonClickableSection-266 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-root-262 makeStyles-enabledVault-263 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-clickableSection-265 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-10-101 MuiGrid-grid-lg-true-105"
      >
        <div
          class="MuiGrid-root-29 makeStyles-iconBadgeContainer-280 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-direction-xs-column-33 MuiGrid-justify-content-xs-center-47 MuiGrid-grid-xs-auto-62"
        >
          <div
            class="MuiGrid-root-29 makeStyles-iconContainer-284 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
          >
            <img
              alt="Badger Badger Vault Symbol"
              class="makeStyles-symbol-278"
              src="/assets/icons/bbadger-ethereum.svg"
            />
          </div>
          <span
            class="MuiTypography-root-135 makeStyles-dca-268 MuiTypography-caption-138"
          >
            DCA Vault
          </span>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-4-55 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-4-109"
            >
              <p
                class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
              >
                Badger
                 - 
                Badger
              </p>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <p
                class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
              >
                8.17%
              </p>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-tvl-269 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <div
                class="MuiBox-root-325 MuiBox-root-376"
              >
                <p
                  class="MuiTypography-root-135 makeStyles-itemText-267 MuiTypography-body1-137"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <div
                class="MuiBox-root-325 MuiBox-root-379"
              >
                <p
                  class="MuiTypography-root-135 makeStyles-itemText-267 MuiTypography-body1-137"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-4-55 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-4-109"
            >
              <p
                class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-8-113"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-29 makeStyles-nonClickableSection-266 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-root-262 makeStyles-enabledVault-263 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-clickableSection-265 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-10-101 MuiGrid-grid-lg-true-105"
      >
        <div
          class="MuiGrid-root-29 makeStyles-iconBadgeContainer-280 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-direction-xs-column-33 MuiGrid-justify-content-xs-center-47 MuiGrid-grid-xs-auto-62"
        >
          <div
            class="MuiGrid-root-29 makeStyles-iconContainer-284 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
          >
            <img
              alt="Badger Digg Vault Symbol"
              class="makeStyles-symbol-278"
              src="/assets/icons/bdigg-ethereum.svg"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-4-55 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-4-109"
            >
              <p
                class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
              >
                Badger
                 - 
                Digg
              </p>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <p
                class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
              >
                8.17%
              </p>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-tvl-269 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <div
                class="MuiBox-root-325 MuiBox-root-382"
              >
                <p
                  class="MuiTypography-root-135 makeStyles-itemText-267 MuiTypography-body1-137"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
            >
              <div
                class="MuiBox-root-325 MuiBox-root-385"
              >
                <p
                  class="MuiTypography-root-135 makeStyles-itemText-267 MuiTypography-body1-137"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-4-55 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-4-109"
            >
              <p
                class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-5-96 MuiGrid-grid-lg-8-113"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-29 makeStyles-nonClickableSection-266 MuiGrid-item-31 MuiGrid-grid-xs-12-75 MuiGrid-grid-md-true-91"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders mobile version correctly 1`] = `
<div>
  <div
    class="makeStyles-badgerMobileOverview-15"
  >
    <div
      class="MuiContainer-root-21 WithStyles(ForwardRef(Container))-root-20 MuiContainer-maxWidthLg-27"
    >
      <div
        class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-1-52 MuiGrid-align-items-xs-center-38"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-badgerOverviewValueTitle-17 MuiTypography-body2-136"
          >
            Ethereum TVL:
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-388"
          >
            <h6
              class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-subtitle2-147"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-body2-136"
          >
            Badger Price:
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-391"
          >
            <p
              class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-body2-136"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root-21 WithStyles(ForwardRef(Container))-root-20 MuiContainer-maxWidthLg-27"
  >
    <div
      class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-justify-content-xs-center-47"
    >
      <div
        class="MuiGrid-root-29 WithStyles(ForwardRef(Grid))-root-132 WithStyles(ForwardRef(Grid))-root-133 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-10-73 MuiGrid-grid-md-6-97"
        >
          <div
            class="makeStyles-headerContainer-134"
          >
            <h6
              class="MuiTypography-root-135 MuiTypography-h6-145 MuiTypography-colorTextPrimary-160"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-135 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-29 MuiGrid-container-30"
    >
      <div
        class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-10-73"
      >
        <p
          class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 makeStyles-badgerOverviewValueTitle-17 MuiTypography-body2-136"
        >
          My Assets:
        </p>
        <div
          class="MuiBox-root-325 MuiBox-root-394"
        >
          <p
            class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-body2-136"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-29 makeStyles-filterWidgetContainer-19 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-2-65"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38 MuiGrid-justify-content-xs-flex-end-48"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-206 MuiIconButton-root-197 makeStyles-filterButton-227"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-205"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-420"
            />
          </button>
        </div>
      </div>
    </div>
    <li
      class="MuiListSubheader-root-168 makeStyles-subHeader-167 MuiListSubheader-sticky-173"
    >
      <div
        class="MuiGrid-root-29 makeStyles-mobileContainer-183 MuiGrid-container-30 MuiGrid-justify-content-xs-space-between-49"
      >
        <div
          class="MuiGrid-root-29 makeStyles-mobileColumn-184 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-title-174 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161 MuiTypography-displayInline-163"
          >
            Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-176"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-29 makeStyles-mobileColumn-184 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-justify-content-xs-flex-end-48 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-title-174 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-176"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
        </div>
      </div>
    </li>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-mobileContainer-277 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-nameAndAprMobile-275 MuiGrid-container-30 MuiGrid-spacing-xs-2-53"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38"
            >
              <img
                alt="Badger Curve.fi renBTC/wBTC/sBTC Vault Symbol"
                class="makeStyles-symbol-278"
                src="/assets/icons/bsbtccrv-ethereum.svg"
              />
              <div
                class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-direction-xs-column-33"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-vaultNameMobile-283 MuiGrid-container-30 MuiGrid-direction-xs-column-33"
            >
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
                  >
                    Convex
                     - 
                    Curve.fi renBTC/wBTC/sBTC
                  </p>
                </div>
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
                  >
                    0.25%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-amountsSection-273 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-404"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-407"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-actionButtonsMobile-274 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-mobileContainer-277 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-nameAndAprMobile-275 MuiGrid-container-30 MuiGrid-spacing-xs-2-53"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38"
            >
              <img
                alt="Badger Badger Vault Symbol"
                class="makeStyles-symbol-278"
                src="/assets/icons/bbadger-ethereum.svg"
              />
              <div
                class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-direction-xs-column-33"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                >
                  <span
                    class="MuiTypography-root-135 makeStyles-dca-268 MuiTypography-caption-138"
                  >
                    DCA Vault
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-vaultNameMobile-283 MuiGrid-container-30 MuiGrid-direction-xs-column-33"
            >
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
                  >
                    Badger
                     - 
                    Badger
                  </p>
                </div>
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-amountsSection-273 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-410"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-413"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-actionButtonsMobile-274 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-mobileContainer-277 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-nameAndAprMobile-275 MuiGrid-container-30 MuiGrid-spacing-xs-2-53"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38"
            >
              <img
                alt="Badger Digg Vault Symbol"
                class="makeStyles-symbol-278"
                src="/assets/icons/bdigg-ethereum.svg"
              />
              <div
                class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-direction-xs-column-33"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-vaultNameMobile-283 MuiGrid-container-30 MuiGrid-direction-xs-column-33"
            >
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
                  >
                    Badger
                     - 
                    Digg
                  </p>
                </div>
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-amountsSection-273 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-416"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-419"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-actionButtonsMobile-274 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders tablet version correctly 1`] = `
<div>
  <div
    class="makeStyles-badgerMobileOverview-15"
  >
    <div
      class="MuiContainer-root-21 WithStyles(ForwardRef(Container))-root-20 MuiContainer-maxWidthLg-27"
    >
      <div
        class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-1-52 MuiGrid-align-items-xs-center-38"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-badgerOverviewValueTitle-17 MuiTypography-body2-136"
          >
            Ethereum TVL:
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-388"
          >
            <h6
              class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-subtitle2-147"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-body2-136"
          >
            Badger Price:
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-391"
          >
            <p
              class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-body2-136"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root-21 WithStyles(ForwardRef(Container))-root-20 MuiContainer-maxWidthLg-27"
  >
    <div
      class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-justify-content-xs-center-47"
    >
      <div
        class="MuiGrid-root-29 WithStyles(ForwardRef(Grid))-root-132 WithStyles(ForwardRef(Grid))-root-133 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-12-75"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-10-73 MuiGrid-grid-md-6-97"
        >
          <div
            class="makeStyles-headerContainer-134"
          >
            <h6
              class="MuiTypography-root-135 MuiTypography-h6-145 MuiTypography-colorTextPrimary-160"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-135 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-29 MuiGrid-container-30"
    >
      <div
        class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-10-73"
      >
        <p
          class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 makeStyles-badgerOverviewValueTitle-17 MuiTypography-body2-136"
        >
          My Assets:
        </p>
        <div
          class="MuiBox-root-325 MuiBox-root-394"
        >
          <p
            class="MuiTypography-root-135 makeStyles-badgerOverviewValueText-18 MuiTypography-body2-136"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-29 makeStyles-filterWidgetContainer-19 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-grid-xs-2-65"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38 MuiGrid-justify-content-xs-flex-end-48"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-206 MuiIconButton-root-197 makeStyles-filterButton-227"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-205"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-420"
            />
          </button>
        </div>
      </div>
    </div>
    <li
      class="MuiListSubheader-root-168 makeStyles-subHeader-167 MuiListSubheader-sticky-173"
    >
      <div
        class="MuiGrid-root-29 makeStyles-mobileContainer-183 MuiGrid-container-30 MuiGrid-justify-content-xs-space-between-49"
      >
        <div
          class="MuiGrid-root-29 makeStyles-mobileColumn-184 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-title-174 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161 MuiTypography-displayInline-163"
          >
            Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-176"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-29 makeStyles-mobileColumn-184 MuiGrid-container-30 MuiGrid-item-31 MuiGrid-align-items-xs-center-38 MuiGrid-justify-content-xs-flex-end-48 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-title-174 MuiTypography-body2-136 MuiTypography-colorTextSecondary-161"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-176"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
        </div>
      </div>
    </li>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-mobileContainer-277 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-nameAndAprMobile-275 MuiGrid-container-30 MuiGrid-spacing-xs-2-53"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38"
            >
              <img
                alt="Badger Curve.fi renBTC/wBTC/sBTC Vault Symbol"
                class="makeStyles-symbol-278"
                src="/assets/icons/bsbtccrv-ethereum.svg"
              />
              <div
                class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-direction-xs-column-33"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-vaultNameMobile-283 MuiGrid-container-30 MuiGrid-direction-xs-column-33"
            >
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
                  >
                    Convex
                     - 
                    Curve.fi renBTC/wBTC/sBTC
                  </p>
                </div>
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
                  >
                    0.25%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-amountsSection-273 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-404"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-407"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-actionButtonsMobile-274 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-mobileContainer-277 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-nameAndAprMobile-275 MuiGrid-container-30 MuiGrid-spacing-xs-2-53"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38"
            >
              <img
                alt="Badger Badger Vault Symbol"
                class="makeStyles-symbol-278"
                src="/assets/icons/bbadger-ethereum.svg"
              />
              <div
                class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-direction-xs-column-33"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                >
                  <span
                    class="MuiTypography-root-135 makeStyles-dca-268 MuiTypography-caption-138"
                  >
                    DCA Vault
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-vaultNameMobile-283 MuiGrid-container-30 MuiGrid-direction-xs-column-33"
            >
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
                  >
                    Badger
                     - 
                    Badger
                  </p>
                </div>
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-amountsSection-273 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-410"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-413"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-actionButtonsMobile-274 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-293 MuiCard-root-292 MuiGrid-root-29 makeStyles-mobileContainer-277 MuiGrid-container-30 MuiPaper-elevation1-297 MuiPaper-rounded-294"
    >
      <div
        class="MuiGrid-root-29 makeStyles-nameAndAprMobile-275 MuiGrid-container-30 MuiGrid-spacing-xs-2-53"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-12-75"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-container-30"
          >
            <div
              class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-align-items-xs-center-38"
            >
              <img
                alt="Badger Digg Vault Symbol"
                class="makeStyles-symbol-278"
                src="/assets/icons/bdigg-ethereum.svg"
              />
              <div
                class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-direction-xs-column-33"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-29 makeStyles-vaultNameMobile-283 MuiGrid-container-30 MuiGrid-direction-xs-column-33"
            >
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-vaultName-282 MuiTypography-body1-137"
                  >
                    Badger
                     - 
                    Digg
                  </p>
                </div>
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-apr-321 MuiTypography-body1-137 MuiTypography-colorTextPrimary-160"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-item-31"
              >
                <div
                  class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-7-70"
                >
                  <p
                    class="MuiTypography-root-135 makeStyles-thinFont-281 MuiTypography-body1-137 MuiTypography-colorTextSecondary-161"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-amountsSection-273 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-6-69"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-416"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-29 MuiGrid-item-31 MuiGrid-grid-xs-true-63"
        >
          <p
            class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137 MuiTypography-displayInline-163"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-325 MuiBox-root-419"
          >
            <p
              class="MuiTypography-root-135 makeStyles-amountsMobile-276 MuiTypography-body1-137"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-395 makeStyles-divider-272"
      />
      <div
        class="MuiGrid-root-29 makeStyles-actionButtonsMobile-274 MuiGrid-container-30"
      >
        <div
          class="MuiGrid-root-29 MuiGrid-container-30 MuiGrid-spacing-xs-2-53 MuiGrid-justify-content-xs-center-47"
        >
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-outlined-338 makeStyles-button-330 MuiButton-outlinedPrimary-339 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-29 MuiGrid-item-31"
          >
            <button
              class="MuiButtonBase-root-206 MuiButton-root-333 MuiButton-contained-341 makeStyles-button-330 MuiButton-containedPrimary-342 MuiButton-disabled-346 WithStyles(ForwardRef(Button))-disabled-332 MuiButtonBase-disabled-207"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-334"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
